# ci-driven-scanner

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: image-release.yaml
burp_reports/: burp.json
burp_wrapper/: main.py  models.py
burp_wrapper/parsers/: junit.py
src/burp_wrapper/: issue_definition_metadata.py  issue_definitions.py  main.py  models.py
src/burp_wrapper/outputters/: console.py  html.py  json.py
src/burp_wrapper/outputters/templates/: burp.html
src/burp_wrapper/parsers/: junit.py
src/burp_wrapper/resources/: issue_definitions.csv
tests/fixtures/: burp_junit_report.xml
wrapper/: main.py  requirements.txt
wrapper/outputters/: console.py
wrapper/parsers/: junit.py
